--- a/index.html
+++ b/index.html
@@ -13,21 +13,17 @@
 </head>
 
 <body>
-  <div class="main">
-    <div class="content">
-      <div class="imgqr">
-        <img src="./images/image-qr-code.png" alt="QR-code" id="imgqr">
-      </div>
-      <div class="text">
-        Improve your front-end skills by building projects
-      </div>
-      <div class="text2">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </div>
+  <section>
+    <div class="imgqr">
+      <img src="./images/image-qr-code.png" alt="QR-code" id="imgqr">
     </div>
-  </div>
-
-
+    <div class="text">
+      Improve your front-end skills by building projects
+    </div>
+    <div class="text2">
+      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    </div>
+  </section>
 </body>
 <!-- <footer>
   <div class="attribution">
